# jira-resilient

./: .gitignore  CHANGELOG.md  LICENSE  README.md  pyproject.toml
.github/workflows/: publish.yml  test.yml
src/jira_resilient/: __init__.py  _models.py  client.py  exceptions.py  http.py  jql.py
tests/: conftest.py  test_client.py  test_http.py  test_jql.py
