[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "jira-resilient"
version = "0.1.3"
description = "Resilient JIRA Server data extraction at scale — seek pagination, reindex-aware recovery, three-tier resilient issue fetch."
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.12"
authors = [{ name = "uofm-matt" }]
keywords = ["jira", "jira-server", "pagination", "etl", "data-warehouse"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = ["requests>=2.31"]

[project.optional-dependencies]
dev = [
    "pytest>=8",
    "pytest-cov>=4",
    "responses>=0.25",
    "ruff>=0.6",
]

[project.urls]
Homepage = "https://github.com/uofm-matt/jira-resilient"
Issues   = "https://github.com/uofm-matt/jira-resilient/issues"

[tool.hatch.build.targets.wheel]
packages = ["src/jira_resilient"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "W", "F", "I", "B", "C4", "SIM", "RET", "UP", "RUF"]
ignore = ["E501"]

[tool.pytest.ini_options]
testpaths = ["tests", "src/jira_resilient"]
addopts = "--doctest-modules"
filterwarnings = ["error"]
